# ThymeWatchRound

./: .gitignore  README.md
common_idf_components/: arduino-esp32.info.md
common_idf_components/gfx_fonts/: CMakeLists.txt
design/: 2024-Round-Smart-Watch-1.3-Inch-EC33-Custom-Dial-IP68-Watch-7-Wireless-Call-Charger-NFC-for-Women-Men-EC33pro-relogiosmartwatch.avif  O1CN01DFoIQ31dcl2kFWjTa_!!2219019533757.png_q50s50.jpg_.avif  README.md  eec7b368-634b-4f22-8d26-fb0bfa7f37b8.psd
docs/: README.md
v4/: README.md  mount.txt
v4/Arduino/SD2USBMSC/: SD2USBMSC.ino
v4/PlatformIO/ESP32S3_EmptyProject/: platformio.ini
v4/PlatformIO/ESP32S3_LS012B7DD06/: platformio.ini
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/components/Arduino_GFX/: CMakeLists.txt
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/components/U8g2_Arduino/: CMakeLists.txt
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/: CMakeLists.txt  common.h  config.h  idf_component.yml  main.cpp  tusb_msc.c  tusb_msc.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/apps/: FileManager.cpp  FileManager.h  Game_Breakout.cpp  Game_Breakout.h  MusicPlayer.cpp  MusicPlayer.h  SensorsApp.cpp  SensorsApp.h  TemplateApp.cpp  TemplateApp.h  ThymeWatchFace.cpp  ThymeWatchFace.h  ThymeWatchMenu.cpp  ThymeWatchMenu.h  UsbMscApp.cpp  UsbMscApp.h  WatchFaceSelector.cpp  WatchFaceSelector.h  apps.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/framework/: ThymeApp.cpp  ThymeApp.h  app_manager.cpp  app_manager.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/gfx/: Arduino_Canvas_6bit.cpp  Arduino_Canvas_6bit.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/hal/: hal_battery_fuel_gauge.cpp  hal_battery_fuel_gauge.h  hal_ble_server.cpp  hal_ble_server.h  hal_digital_crown.cpp  hal_digital_crown.h  hal_imu.cpp  hal_imu.h  hal_light_sensor.cpp  hal_ls012b7dd06.cpp  hal_ls012b7dd06.h  hal_pca6408a.cpp  hal_pca6408a.h  hal_pressure_sensor.cpp  hal_pressure_sensor.h  hal_rtc.cpp  hal_rtc.h  hal_sht3x.cpp  hal_va_meter.cpp  hal_va_meter.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/resources/: anim_data_12_frames.h  bloxx.h  casio_yellow.h  jiaming2.h  jiaming3.h  lcd_digits.h  music_player.h
v4/idf/thyme_watch_idf_arduino_crossfire_idf_v5_3_2/main/util/: file.cpp  file.h  memory.cpp  memory.h  str.h  system.cpp  system.h  ui.cpp  ui.h
v4/scripts/: batch_rgb222_converter.py  bitmaps.h  image_data.h  jiaming2.h  png_to_1bit_bitmap_batch.py
(+218 files in other folders)
